# groep-ta-2020-2021-stein-khemin-niels-robin

./: .gitignore  Building.cpp  Building.h  CMakeLists.txt  Cell.cpp  Cell.h  CellulaireAutomaat.cpp  CellulaireAutomaat.h  Citizen.cpp  Citizen.h  CitySimulation.cpp  CitySimulation.h  GeneticAlgorithm.cpp  GeneticAlgorithm.h  Lib.h  MainWindow.cpp  MainWindow.h  PFCell.cpp  PFCell.h  Pathfinding.cpp  Pathfinding.h  PathfindingCell.cpp  PathfindingCell.h  Pedestrian.cpp  Pedestrian.h  README.md  Rules.cpp  Rules.h  Template.cpp  Transport.cpp  Transport.h  Utils.cpp  Utils.h  Vehicle.cpp  Vehicle.h  main.cpp  settingswindow.cpp  settingswindow.h  settingswindow.ui  settingswindow.ui.autosave
Maps/: latest001.txt  map001.txt  rule001.txt  rule002.txt  rule003.txt  rule004.txt  rule006.txt  rule007.txt  rule008.txt
documentation/: TO-groep voortgangsrapport.xlsx  index.html.lnk
documentation/html/: _building_8h_source.html  _cell_8h_source.html  _cellulaire_automaat_8h_source.html  _citizen_8h_source.html  _city_simulation_8h_source.html  _genetic_algorithm_8h_source.html  _lib_8h_source.html  _main_window_8h_source.html  _p_f_cell_8h_source.html  _pathfinding_8h_source.html  _transport_8h_source.html  _vehicle_8h_source.html  annotated.html  class_building-members.html  class_building.html  class_cell-members.html  class_cell.html  class_cellulaire_automaat-members.html  class_cellulaire_automaat.html  class_citizen-members.html  class_citizen.html  class_city_simulation-members.html  class_city_simulation.html  class_genetic_algorith-members.html  class_genetic_algorith.html  class_genome-members.html  class_genome.html  class_house-members.html  class_house.html  class_industrial_zone-members.html  class_industrial_zone.html  class_main_window-members.html  class_main_window.html  class_p_f_cell-members.html  class_p_f_cell.html  class_p_f_mask-members.html  class_p_f_mask.html  class_residential_zone-members.html  class_residential_zone.html  class_road-members.html  (+22 more)
documentation/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  (+10 more)
lib/: DesignByContract.h
